# indoor-localization-server

./: mmap_from_app.ipynb  mmap_galaxyA31.ipynb  mmap_galaxyS21.ipynb  mmap_iPhone15.ipynb  particle_filtering.ipynb  particle_filtering_euije.ipynb  particle_filtering_faster.ipynb  plot_result.ipynb  pyproject.toml  server.py  step-estimation.ipynb  step_length.py  step_orientation.py  utils.py
data/: obstacle_mask.txt  position_data (10).csv  position_data (13).csv  wifi_mask2.txt
data/10step_slow_176cm_5m_A31/: Accelerometer.csv  Battery.csv  BatteryTemp.csv  Brightness.csv  Compass.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Light.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Microphone.csv  Network.csv  Orientation.csv  Pedometer.csv  TotalAcceleration.csv
data/10step_slow_5m_A31/: Accelerometer.csv  Battery.csv  BatteryTemp.csv  Brightness.csv  Compass.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Light.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Microphone.csv  Network.csv  Orientation.csv  Pedometer.csv  TotalAcceleration.csv
data/5step_fast_184cm_5m_A31/: Accelerometer.csv  Battery.csv  BatteryTemp.csv  Brightness.csv  Compass.csv  Gravity.csv  Gyroscope.csv  GyroscopeUncalibrated.csv  Light.csv  Magnetometer.csv  MagnetometerUncalibrated.csv  Metadata.csv  Microphone.csv  Network.csv  Orientation.csv  Pedometer.csv  TotalAcceleration.csv
data/6step_fast_176cm_5m_A31/: Accelerometer.csv  Battery.csv  BatteryTemp.csv  Brightness.csv  Compass.csv  Gravity.csv  Gyroscope.csv  Light.csv  (+9 more)
(+354 files in other folders)
