[tool.poetry]
name = "magicol-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"
fastdtw = "^0.3.4"
dtaidistance = "^2.3.12"
filterpy = "^1.4.5"
paho-mqtt = "^2.1.0"
flask = "^3.1.0"
ahrs = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
